--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         continue.</strong
       >
     </noscript>
-    <div id="app"></div>
+    <div id="app" class="bg-[#303133]"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
