!1 完成任务部门 * docs: 完成部门

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-<!--    <title><%= htmlWebpackPlugin.options.title %></title>-->
-      <link rel="shortcut icon" type="image/x-icon" href="https://unpkg.byted-static.com/byted/arco-config/1.0.11/assets/arco_arcopro.ico">
+    <!--    <title><%= htmlWebpackPlugin.options.title %></title>-->
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="https://unpkg.byted-static.com/byted/arco-config/1.0.11/assets/arco_arcopro.ico"
+    />
     <title>后台管理系统</title>
   </head>
   <body>
